--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.1
   path: ^1.8.3
   google_mlkit_text_recognition: ^0.11.0
+  flutter_tts: ^3.8.5
 
 dev_dependencies:
   flutter_test:
