--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  camera: ^0.10.5+8
+  camera: ^0.10.5+9
   animated_splash_screen: ^1.3.0
   tflite: ^1.1.2
   path_provider: ^2.1.1
   path: ^1.8.3
   google_mlkit_text_recognition: ^0.11.0
   flutter_tts: ^3.8.5
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
